--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ nav ul li {
 }
 
 nav ul li a {
+	padding: 30px;
     text-decoration: none;
 	color: white;
 	font-size: 13px;
@@ -146,7 +147,7 @@ nav ul li a:hover {
 	
 #cont #text {
 	
-	color: red;
+	color: white;
 	width: 60%;
 }
 
